--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server"
+    "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
