--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,35 +6,29 @@ services:
     restart: always
     build: ./nginx
     ports:
-      - 3050:80
+      - 8000:80
     depends_on:
       - api
       - client
   api:
     container_name: native-server
     build: ./server
-    ports:
-      - 5000:5000
     volumes:
       - /app/node_modules
       - ./server:/app
     depends_on:
-      - server-database
+      - db
     environment:
-      - DATABASE_URL=server-database:27017
-      - PORT=5000
-  server-database:
+      - DATABASE_URL=db:27017
+      - SERVER_PORT=5000
+  db:
     container_name: native-db
     image: mongo
-    ports:
-      - 27017:27017
     volumes:
-      - ./db:/data/db
+      - ./db:/data
   client:
     container_name: native-client
     build: ./client
-    ports:
-      - 8080:8080
     volumes:
     - /app/node_modules
     - ./client:/app
