add watcher for data options

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
   db:
     container_name: native-db
     image: mongo
+    ports:
+      - 27017:27017
     volumes:
       - ./db:/data
   client:
