--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "vue": "^2.6.11",
+    "vue-router": "^3.4.7",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
