--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     environment:
       - DATABASE_URL=db:27017
       - SERVER_PORT=5000
+      - IMAGE_UPLOAD_PATH=./public/images
+      - MAX_FILE_UPLOAD=1000000
   db:
     container_name: native-db
     image: mongo
