--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.20",
     "vue": "^2.6.11",
     "vue-router": "^3.4.7",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.5.0",
