--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,12 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.2"
   }
 }
