--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "slugify": "^1.4.5",
+    "socket.io": "^2.3.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
