--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.20",
     "vue": "^2.6.11",
     "vue-router": "^3.4.7",
+    "vue-socket.io": "^3.0.10",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
   },
