--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,4 +27,12 @@ server {
   location /images {
     proxy_pass http://api;
   }
+
+  location /socket.io {
+    proxy_pass http://api;
+      proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+  }
 }
