--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
+    "socket.io-client": "^2.3.1",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.6",
     "vue-router": "^3.4.7",
-    "vue-socket.io": "^3.0.10",
+    "vue-socket.io-extended": "^4.0.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
   },
