--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^5.7.55",
     "@vue/composition-api": "^1.0.0-beta.17",
     "axios": "^0.20.0",
+    "js-cookie": "^2.2.1",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "socket.io-client": "^2.3.1",
