--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "socket.io-client": "^2.3.1",
+    "uuid": "^8.3.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
     "vue-router": "^3.4.7",
