--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
+    "redis": "^3.0.2",
     "slugify": "^1.4.5",
     "socket.io": "^2.3.0",
+    "uuid": "^8.3.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
