--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "redis": "^3.0.2",
     "slugify": "^1.4.5",
     "socket.io": "^2.3.0",
+    "socket.io-cookie-parser": "^1.0.0",
     "uuid": "^8.3.1",
     "xss-clean": "^0.1.1"
   },
