--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   redis:
     container_name: native-redis
-    image: 'redis:latest'
+    image: redis
   nginx:
     container_name: native-nginx
     restart: always
