--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.2.0",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
+    "google-auth-library": "^6.1.3",
     "helmet": "^4.1.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
