--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
     "google-auth-library": "^6.1.3",
+    "@google-cloud/storage": "^5.5.0",
     "helmet": "^4.1.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
