--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     depends_on:
       - db
     environment:
-      - DATABASE_URL=db:27017
+      - DATABASE_URL=mongodb+srv://admin:admin@like-a-native.oqdhp.mongodb.net/native?retryWrites=true&w=majority
       - SERVER_PORT=5000
       - IMAGE_UPLOAD_PATH=./public/images
       - MAX_FILE_UPLOAD=1000000
