--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "typescript": "^4.0.3",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
+    "vue-youtube-embed": "^2.2.2",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
